# doubao2api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.html  qianwen_api_notes.md
doubao2api/: __init__.py  __main__.py  account_manager.py  browser_client.py  captcha_handler.py  captcha_server.py  client.py  qianwen_client.py  qr_login.py  session.py  sse.py  token_counter.py  tool_calling.py  unified_server.py  video_request.py  video_tasks.py
doubao2api/static/: admin.html
tests/: test_account_quota.py  test_browser_video_payload.py  test_video_quota_error.py  test_video_request.py  test_video_task_store.py
