[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doubao2api"
dynamic = ["version"]
description = "豆包逆向API - OpenAI兼容的聊天/图片/视频/音乐生成服务"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "wangchuxiaoji-oss" },
]
keywords = ["doubao", "豆包", "openai", "api", "reverse-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "aiohttp>=3.9",
    "fastapi>=0.100",
    "pydantic>=2.0",
    "uvicorn>=0.20",
]

[project.urls]
Homepage = "https://github.com/wangchuxiaoji-oss/doubao2api"
Repository = "https://github.com/wangchuxiaoji-oss/doubao2api"
Issues = "https://github.com/wangchuxiaoji-oss/doubao2api/issues"

[project.scripts]
doubao2api = "doubao2api.__main__:main"

[tool.hatch.version]
path = "doubao2api/__init__.py"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
